k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: wokibrain
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-type: 'basic'
    nginx.ingress.kubernetes.io/auth-secret: 'grafana-basic-auth'
    nginx.ingress.kubernetes.io/auth-realm: 'Grafana Authentication Required'
spec:
  tls:
    - hosts:
        - grafana.wokibrain.grgcrew.com
      secretName: grafana-tls
  rules:
    - host: grafana.wokibrain.grgcrew.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: wokibrain
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-type: 'basic'
    nginx.ingress.kubernetes.io/auth-secret: 'prometheus-basic-auth'
    nginx.ingress.kubernetes.io/auth-realm: 'Prometheus Authentication Required'
spec:
  tls:
    - hosts:
        - prometheus.wokibrain.grgcrew.com
      secretName: prometheus-tls
  rules:
    - host: prometheus.wokibrain.grgcrew.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
